--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,79 @@
+* {
+  padding: 0; 
+  margin: 0; 
+}
 .App {
-  text-align: center;
+  width: 100%; 
+  height: 100vh; 
+  background: linear-gradient(
+                    to bottom, 
+                    rgb(36, 33, 33) 50%, 
+                    rgb(240, 237, 237) 50%
+                    );   
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.section-user {
+  border-radius: 5px; 
+  position: relative; 
+  top: 50%; 
+  left: 50%; 
+  transform: translate(-50%, -50%);
+  background-color: white;
+  width: 400px; 
+  height: 300px; 
+  overflow: hidden; 
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.top-bar {
+  background-color: rgb(236, 230, 230);
+  width: 100%; 
+  height: 80px; 
+  border-bottom: 1px solid rgb(202, 200, 200); 
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
+.bottom-bar {
+  display: flex; 
   flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center; 
+  justify-content: space-around;
+  height: 100%; 
+  width: 100%; 
+  margin-top: -80px; 
+}
+.user-info { 
+  width: 70%;
+  height: 90%;
+  display: flex; 
+  flex-direction: column;
+  align-items: center; 
+  justify-content: space-around;
+  /* border: 1px solid red;  */
 }
 
-.App-link {
-  color: #61dafb;
+.circle-image {
+  border-radius: 50%; 
+  width: 80px; 
+  height: 80px; 
+  border: 3px solid white; 
+  box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.user-icons {
+  width: 100%; 
+  display: flex; 
+  justify-content: space-around;
+  font-size: 1.3rem; 
+  color: rgba(0,0,0,.65);
+}
+
+.btn {
+  padding: 7px; 
+  text-transform: uppercase;
+  color: #fff; 
+  background-color: rgb(110, 139, 219);
+  border: none; 
+  font-size: .65rem; 
+}
+
+.btn:active {
+  box-shadow: inset 0px 0px 2px 2px rgb(95, 95, 173);
 }
