--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,10 @@
 * {
   padding: 0; 
   margin: 0; 
+  font-family: Arial, Helvetica, sans-serif;
 }
+
+
 .App {
   width: 100%; 
   height: 100vh; 
@@ -22,6 +25,7 @@
   width: 400px; 
   height: 300px; 
   overflow: hidden; 
+  box-shadow: 0 0 7px rgba(0,0,0,.2);
 }
 
 .top-bar {
@@ -57,6 +61,16 @@
   box-shadow: 0 0 5px rgba(0,0,0,0.3);
 }
 
+.user-title {
+  color:rgb(36, 33, 33); 
+  font-size: .7rem; 
+}
+.user-value {
+  color: rgb(36, 33,33);
+  font-size: 1rem; 
+  font-weight: bold; 
+}
+
 .user-icons {
   width: 100%; 
   display: flex; 
@@ -76,4 +90,16 @@
 
 .btn:active {
   box-shadow: inset 0px 0px 2px 2px rgb(95, 95, 173);
+}
+
+.icon {
+  background-color: transparent;
+  border: none; 
+  outline: none; 
+  font-size: 1.3rem; 
+  color:rgb(36, 33, 33);
+}
+
+.icon:hover {
+  color: rgb(110, 139, 219);
 }
